Fix layout on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -222,7 +222,7 @@ body {
     margin: 20px 0 0 0;
     display: flex;
     flex-wrap: wrap;
-    width: 419px;
+    /*width: 419px;*/
 }
 
 .tab.active {
@@ -258,8 +258,8 @@ body {
     margin: 0;
     padding: 0;
 
-    grid-row: 2/2;
-    grid-column: 1/3;
+    /*grid-row: 2/2;
+    grid-column: 1/3;*/
     /*width: 10%%;*/
     /*flex-basis: 100%;*/
 }
@@ -281,8 +281,8 @@ body {
     height: 10px;
     background: url(/images/shadow_10.gif);
     margin: 0;
-    grid-row: 3/3;
-    grid-column: 1/3;
+    /*grid-row: 3/3;
+    grid-column: 1/3;*/
 }
 
 #sidebar {
@@ -292,7 +292,7 @@ body {
     padding: 11px;
     margin: 0;
     position: relative;
-    grid-column: 1/1;
+    /*grid-column: 1/1;*/
 }
 
 .abner {
@@ -307,12 +307,8 @@ body {
 #content {
     background-color: #F2F1F3;
     padding: 15px;
-    /*display: table-cell;*/
     vertical-align: top;
-    /*max-width: 900px;*/
-    /*min-width: 600px;*/
-    grid-column: 1/2;
-    grid-row: 4/4;
+    flex-grow: 1;
 }
 .abner-under {
     width:60px; height:250px;display: block;float: left;
@@ -638,19 +634,23 @@ nav {
     margin: 0 auto;
     max-width: 1400px;
     width: 100%;
-    display: grid;
+    /*display: flex;*/
     /*grid-template-columns: minmax(25%,75%) minmax(75%,25%);*/
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(3,auto) max-content 1fr;
+    /*grid-template-columns: 100%;
+    grid-template-rows: repeat(3,auto) max-content 1fr;*/
 }
 
+.row-wrapper {
+    display: flex;
+    align-items: stretch;
+}
 
 .pagination li {
     display: inline;
 }
 
 
-@media screen and (min-width: 63.9385em) {
+/*@media screen and (min-width: 63.9385em) {
     #sidebar {
         grid-column: 1/1;
     }
@@ -674,5 +674,97 @@ nav {
         width: auto;
 }
 
+}*/
+
+a.open-panel, a.close-panel {
+    display: none;
+}
+
+a.open-panel img {
+    width: 48px;
+}
+
+@media only screen and (max-width: 55em) {
+    /* Move nav off screen, setup transitions */
+    #navbar {
+        width: 70%;
+        position: absolute;
+        left: -70%;
+        top: 30px;
+        height: 100%;
+        background: #d7d6d6;
+        display: block!important;
+        padding-left: 0!important;
+    }
+
+    #sidebar {
+        width: 70%;
+        position: absolute;
+        left: -70%;
+        top: 225px;
+        height: 100%;
+        background: #d7d6d6;
+        display: block!important;
+        padding: 0;
+    }
+    #navbar .tab {
+        float: none;
+        width: 100%;
+        background: none!important;
+        display: block;
+        border-radius: 5px;
+        padding: 0;
+    }
+
+    #navbar .tab a {
+        width: 100%!important;
+        background: none!important;
+        padding: 0;
+    }
+
+    #navbar .tab:hover {
+        background-color: #d2d0d0 !important;
+    }
+    #navbar .tab.active {
+        background-color: #b6b6b6 !important;
+
+    }
+    /* Reveal open/close buttons */
+    a.open-panel, a.close-panel {
+        display: inline;
+    }
+
+    .close-panel {
+        position: relative;
+        top: .5em;
+        left: 1em;
+    }
+
+    .openNav #page_wrapper {
+        left: 0;
+        -webkit-transform: translate3d(70%, 0, 0);
+        -moz-transform: translate3d(70%, 0, 0);
+        -ms-transform: translate3d(70%, 0, 0);
+        -o-transform: translate3d(70%, 0, 0);
+        transform: translate3d(70%, 0, 0);
+        -webkit-transition: -webkit-transform 500ms ease;
+        -moz-transition: -moz-transform 500ms ease;
+        -o-transition: -o-transform 500ms ease;
+        transition: transform 500ms ease;
+    }
+
+    /* When the panel is closed, transition the page back to the left */
+    #page_wrapper {
+        left: 0;
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+        -o-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+        -webkit-transition: -webkit-transform 500ms ease;
+        -moz-transition: -moz-transform 500ms ease;
+        -o-transition: -o-transform 500ms ease;
+        transition: transform 500ms ease;
+    }
 }
 
